2025-06-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Conditional Expressions): Fix indexing by replacing
	@code{@?} with @code{?}.

2025-06-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* etc/pvm-wraps-whitelist: Adapt the list of allowed functions due
	to recent change in implementation of `jitter_fatal' macro.

2025-06-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-program.c (pvm_disassemble_program): Pass NULL as user data
	to jitter routine printer.
	* libpoke/pvm.jitter (pvm_literal_printer_cast): Add new (unused) param
	for user data.
	(pvm_literal_printer): Likewise.
	(pvm_literal_printer_hi): Likewise.
	(pvm_literal_printer_lo): Likewise.
	(popf_printer): Likewise.
	(bits_printer): Likewise.
	(endian_printer): Likewise.
	(nenc_printer): Likewise.

2025-03-15  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/poke.c (pk_print_version): Update --version copyright to
	2025.

2025-03-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/poke.pkl/for-in-int-struct-4.pk (Foo): Fix the type to
	compile!

2025-03-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-asm.h (pkl_asm_for_loop): Add new parameter for type of
	loop's condition.
	* libpoke/pkl-asm.c (pkl_asm_for_loop): Use new parameter to generate
	appropriate variant of BZ insn when available.
	* libpoke/pkl-promo.c (pkl_promo_ps_loop_stmt): New phase for loops to
	promote loop's condition if the condition is of type integral struct.
	(pkl_phase_promo): Register new phase.
	* libpoke/pkl-gen.c (pkl_gen_pr_loop_stmt): Pass type of condition
	to `pkl_asm_for_loop' when available.
	* testsuite/poke.pkl/for-in-int-struct-1: Fix the test to actually
	verify correctness of codegen.  Test was unable to catch the bug due
	to "sub-string match" behavior of `dg-output'.
	* testsuite/poke.pkl/for-in-int-struct-2: New test.
	* testsuite/poke.pkl/for-in-int-struct-3: Likewise.
	* testsuite/poke.pkl/for-in-int-struct-4: Likewise.