@@ -1598,8 +1598,13 @@ pvm_print_val_1 (pvm vm, int depth, int mode, int base, int indent,
     }
   else if (PVM_IS_CLS (val))
     {
+      pvm_val name = PVM_VAL_CLS_NAME (val);
+
       pk_term_class ("special");
-      pk_puts ("#<closure>");
+      if (name == PVM_NULL)
+        pk_puts ("#<closure>");
+      else
+        pk_printf ("#<closure:%s>", PVM_VAL_STR (name));
       pk_term_end_class ("special");
     }
   else
