@@ -2,6 +2,6 @@
 
 /* { dg-command {.set obase 10} } */
 /* { dg-command {asm any: ("typof; nip; tyagetb; nip" : int[2]())} } */
-/* { dg-output "#<closure>" } */
+/* { dg-output "#<closure:array_bounder>" } */
 /* { dg-command {asm any: ("typof; nip; tyagetb; nip; call" : int[2]())} } */
 /* { dg-output "\n2UL" } */
